fixed: not showing on alert anymore, shows in a result <p>

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
     font-size: 18px;
 }
 
-.input1, .input2 {
+.input1, .input2, .result-text {
     border-radius: 15px;
     background: #BADEFC;
     color: #9D44B5;
@@ -96,6 +96,16 @@ button {
 button:hover {
     background-color: #A33E63;
     font-size: 15px;
+}
+
+.result-text {
+
+    margin-top: 30px;
+    padding: 10px;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen, (max-width: 600px) {
